Updated README.md
Added new usage info. Replaced old usage info.